test/spec_vectors/i64/fail/module_16.wat
(module (func (result i64) (i64.eqz (i32.const 0))))